--- a/deep-learning.html
+++ b/deep-learning.html
@@ -110,7 +110,7 @@ the center of our core mission, building state of the art technologies. You will
 <p><span class="badge badge-light">Tel Aviv-Yafo, Israel</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999697832945-working-student-in-data-management-deep-learning-ai'>Bosch Group Working student in Data Management / Deep Learning / AI | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999697832945-working-student-in-data-management-deep-learning-ai'>Bosch Group Working student in Data Management / Deep Learning / AI | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
@@ -118,7 +118,7 @@ the center of our core mission, building state of the art technologies. You will
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/tencent/jobs/4473234002'>Job Application for Deep Learning Framework Research Engineer at Tencent</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/tencent/jobs/4473234002'>Job Application for Deep Learning Framework Research Engineer at Tencent</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-18</p>
 <hr/>
@@ -142,7 +142,7 @@ the center of our core mission, building state of the art technologies. You will
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/samsungssi/job/oVCmbfwO'>Samsung Semiconductor, Inc. Careers - Research Intern, Deep Learning Platform</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/samsungssi/job/oVCmbfwO'>Samsung Semiconductor, Inc. Careers - Research Intern, Deep Learning Platform</a></h5> 
 <p><span class="badge badge-light">San Jose, California</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
@@ -171,7 +171,7 @@ Skills at Crisalix.</p>
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://aluperf.referrals.selectminds.com/jobs/bell-labs-internship-mobility-robustness-optimization-through-deep-reinforcement-learning-36253'>Bell Labs Internship - Mobility Robustness Optimization through Deep Reinforcement Learning - Nokia Careers</a></h5> 
+<h5><a href='https://aluperf.referrals.selectminds.com/jobs/bell-labs-internship-mobility-robustness-optimization-through-deep-reinforcement-learning-36253'>Bell Labs Internship - Mobility Robustness Optimization through Deep Reinforcement Learning - Nokia Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
@@ -308,7 +308,7 @@ with a?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-23</p>
 <hr/>
-<h5><a href='https://headhonchos.quezx.com/jobs/Manager-Analytics-Deep-Machine-Learning-Iit-nit-iim-isb-xlri-fms-Business-Analytics-Consumer-Durables-Semi-Durables-Gurgaon-1263033'>Hiring For Manager - Analytics - Deep Machine Learning - Iit/nit/iim/isb/xlri/fms in Gurgaon for Exp: 5-10 yrs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://headhonchos.quezx.com/jobs/Manager-Analytics-Deep-Machine-Learning-Iit-nit-iim-isb-xlri-fms-Business-Analytics-Consumer-Durables-Semi-Durables-Gurgaon-1263033'>Hiring For Manager - Analytics - Deep Machine Learning - Iit/nit/iim/isb/xlri/fms in Gurgaon for Exp: 5-10 yrs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-09-23</p>
 <hr/>
@@ -354,7 +354,7 @@ design, build, and ship TensorRT: NVIDIA's high-performance deep learning?...</p
 You have strong mathematical foundation in machine learning and deep learning
 .</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999695331021-software-engineer-deep-learning'>Bosch Group Software Engineer, Deep Learning | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999695331021-software-engineer-deep-learning'>Bosch Group Software Engineer, Deep Learning | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-17</p>
 <hr/>
@@ -436,7 +436,7 @@ software engineer while also allowing you to work with state-of-the-art?...</p>
 <p>2 days ago ... We are currently looking for a senior data scientist with a passion for deep 
 learning to join the team at Thomson Reuters Labs in Zug. What do we do?</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://incubit.breezy.hr/p/6eb8a838aede-deep-learning-engineer'>Deep Learning Engineer at Incubit Inc.</a></h5> 
+<h5><a href='https://incubit.breezy.hr/p/6eb8a838aede-deep-learning-engineer'>Deep Learning Engineer at Incubit Inc.</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-08-28</p>
 <hr/>
@@ -487,7 +487,7 @@ machine learning algorithms, playing with state of the art deep learning models?
 <p>Aug 7, 2019 ... Developer Technology Intern - AI | Canada, Toronto ? Deep Learning Intern ... 
 Compute Performance Developer Technology Intern - CUDA | Canada, Toronto.</p>
 <hr/>
-<h5><a href='https://nvidia.wd5.myworkdayjobs.com/en-US/UniversityJobs/job/Canada-Toronto/Research-Scientist-Intern---Deep-Learning_JR1923743'>Research Scientist Intern - Deep Learning</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://nvidia.wd5.myworkdayjobs.com/en-US/UniversityJobs/job/Canada-Toronto/Research-Scientist-Intern---Deep-Learning_JR1923743'>Research Scientist Intern - Deep Learning</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Aug 7, 2019 ... We are now looking for a Research Scientist Intern ? Deep Learning. NVIDIA is 
 searching for a world-class researcher to join our research team. We are?...</p>
