--- a/project-manager.html
+++ b/project-manager.html
@@ -40,20 +40,24 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://mdanderson.referrals.selectminds.com/jobs/program-manager-division-publications-internal-medicine-division-admin-office-23271'>Program Manager, Division Publications - Internal Medicine Division Admin Office - MD Anderson Cancer Center Careers</a></h5> 
+<h5><a href='http://centimark.applytojob.com/apply/RCHn3wfgTw/Commercial-Project-Manager-CentiMark-Roofing'>Commercial Project Manager (CentiMark Roofing) - CentiMark Corporation - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='https://mdanderson.referrals.selectminds.com/jobs/program-manager-division-publications-internal-medicine-division-admin-office-23271'>Program Manager, Division Publications - Internal Medicine Division Admin Office - MD Anderson Cancer Center Careers</a></h5> 
+<p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
 <h5><a href='https://jobs.lever.co/notonthehighstreet/2801a630-154c-4f12-a53e-767e76174d79'>Notonthehighstreet - Business Development and Strategic Project Manager</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Richmond London</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/thumbtack/jobs/1939000'>Job Application for Program Manager, Strategic Planning at Thumbtack</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/thumbtack/jobs/1939007'>Job Application for Program Manager, Company Planning at Thumbtack</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/americanwell/jobs/4498432002'>Job Application for Project Manager, Health Systems at American Well</a></h5> 
@@ -80,7 +84,7 @@
 <p><span class="badge badge-light">North America Canada</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/p3-americas/job/oJlsbfwr'>umlaut North America Careers - Project Manager Operations (PMO)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/p3-americas/job/oJlsbfwr'>umlaut North America Careers - Project Manager Operations (PMO)</a></h5> 
 <p><span class="badge badge-light">North America Montreal Canada</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -96,7 +100,7 @@
 <p><span class="badge badge-light">Denver, CO</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://www.cv-library.co.uk/job/211112753/Mechanical-Project-Manager?s=100340&utm_source=dlvr.it&utm_medium=twitter'>Mechanical Project Manager | CV-Library.co.uk | 211112753</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.cv-library.co.uk/job/211112753/Mechanical-Project-Manager?s=100340&utm_source=dlvr.it&utm_medium=twitter'>Mechanical Project Manager | CV-Library.co.uk | 211112753</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -144,11 +148,11 @@
 <p><span class="badge badge-light">San Francisco, CA  San Francisco, California</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/infotechsourcing/job/xqwhk9upyd15sinnsr16wwgmpr'>Technical Project Manager III :?9493433 | Current Openings</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/infotechsourcing/job/xqwhk9upyd15sinnsr16wwgmpr'>Technical Project Manager III :?9493433 | Current Openings</a></h5> 
 <p><span class="badge badge-light">Menlo Park, CA  Menlo Park, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://westernun.referrals.selectminds.com/jobs/technical-project-manager-21069'>Technical Project Manager - Western Union Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://westernun.referrals.selectminds.com/jobs/technical-project-manager-21069'>Technical Project Manager - Western Union Careers</a></h5> 
 <p><span class="badge badge-light">Denver, Colorado United States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -156,7 +160,7 @@
 <p><span class="badge badge-light">Temple Terrace, FLTemple Terrace, FL</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/radiantdigital/jobs/project-manager-24284-tx-cfA9rC-Wer6BTLaKjNoogA'>Project Manager-24284-TX #0684 job at Radiant Digital in Irving, TX, powered by JobScore</a></h5> 
+<h5><a href='https://careers.jobscore.com/careers/radiantdigital/jobs/project-manager-24284-tx-cfA9rC-Wer6BTLaKjNoogA'>Project Manager-24284-TX #0684 job at Radiant Digital in Irving, TX, powered by JobScore</a></h5> 
 <p><span class="badge badge-light">Irving, TXIrving, TX</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -164,11 +168,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999698517965-it-project-manager'>Ubisoft IT Project Manager | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999698517965-it-project-manager'>Ubisoft IT Project Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Montreal, QCCanada  Montreal</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/EastersealsSouthernCalifornia/743999698515925-aba-program-manager'>Easterseals Southern California ABA Program Manager | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/EastersealsSouthernCalifornia/743999698515925-aba-program-manager'>Easterseals Southern California ABA Program Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">California California</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -220,7 +224,7 @@
 <p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.energycentral.com/job/owner-039-s-engineering-project-manager-renewable-energy-portland-oregon-205903'>Owner's Engineering Project Manager - Renewable Energy in Portland, Oregon | EnergyCentralJobs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.energycentral.com/job/owner-039-s-engineering-project-manager-renewable-energy-portland-oregon-205903'>Owner's Engineering Project Manager - Renewable Energy in Portland, Oregon | EnergyCentralJobs</a></h5> 
 <p><span class="badge badge-light">Portland, Oregon</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -282,7 +286,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/spin/e2fa791f-1c1b-4c48-9960-ae2999bbbbef'>Spin - Project Manager</a></h5> 
+<h5><a href='https://jobs.lever.co/spin/e2fa791f-1c1b-4c48-9960-ae2999bbbbef'>Spin - Project Manager</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -306,7 +310,7 @@
 <p><span class="badge badge-light">Arlington, VA Arlington</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://fnih.org/about/careers/scientific-pm-neuroscience'>Scientific Project Manager - Neuroscience | FNIH</a></h5> 
+<h5><a href='https://fnih.org/about/careers/scientific-pm-neuroscience'>Scientific Project Manager - Neuroscience | FNIH</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -360,7 +364,7 @@
 <p><span class="badge badge-light">Atlanta, GA</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e584960'>Stellenangebot: Project Manager Marketing BI (m/f/x) (Berlin) ? dasauge? Stellenmarkt</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e584960'>Stellenangebot: Project Manager Marketing BI (m/f/x) (Berlin) ? dasauge? Stellenmarkt</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -412,7 +416,7 @@
 <p><span class="badge badge-light">Orlando, FL, USA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.cv-library.co.uk/job/211097786/Delivery-Residential-Project-Manager?s=100340&utm_source=dlvr.it&utm_medium=twitter'>Delivery Residential Project Manager | CV-Library.co.uk | 211097786</a></h5> 
+<h5><a href='https://www.cv-library.co.uk/job/211097786/Delivery-Residential-Project-Manager?s=100340&utm_source=dlvr.it&utm_medium=twitter'>Delivery Residential Project Manager | CV-Library.co.uk | 211097786</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -439,11 +443,6 @@
 <h5><a href='https://jobs.lever.co/loblawdigital/d46777c6-d8c0-40fb-90a0-a357048f9cad'>Loblaw Digital - Project Manager ? 1 Year Contract</a></h5> 
 <p><span class="badge badge-light">Toronto, Canada  Toronto</span></p>
 <p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/lazparking/job/oKxnbfwz'>LAZ Parking Careers - Project Manager - Commercial Operations</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>6 days ago ... The Project Manager oversees the operations of a location(s), under the direction 
-of the Operations Manager to ensure 24/7 professional parking management.</p>
 <hr/>
 
 
